--- a/reportico_defaults.php.example
+++ b/reportico_defaults.php.example
@@ -11,48 +11,39 @@
     */
     function reportico_defaults($reportico)
     {
-            // Set up styles
-            // Use 
-            // $styles = array ( "styleproperty" => "value", .... );
-            // $reportico->apply_styleset("REPORTSECTION", $styles, "columnname", WHENTOAPPLY );
-            // Where REPORTSECTION is one of ALLCELLS ROW CELL PAGE BODY COLUMNHEADERS GROUPHEADER GROUPHEADERLABEL GROUPHEADERVALUE GROUPTRAILER
-            // and WHENTOAPPLY can be PDF or HTML of leave unsepcified/false for both
-
-
-             // REPORT BODY STYLES
+            // Grey report body with black border and defautl font trebuchet
             $styles = array(
-                //"background-color" => "#cccccc",
+                "background-color" => "#cccccc",
                 "border-width" => "2px 2px 2px 2px",
                 "border-style" => "solid",
                 "border-color" => "#000000",
-                //"color" => "#003f00",
-                //"padding" => "0 20 0 20",
-                //"margin" => "0 0 0 5",
-                "font-family" => "freesans",
+                "color" => "#003f00",
+                "padding" => "0 20 0 20",
+                "margin" => "0 0 0 5",
+                "font-family" => "trebuchet",
                 );
             $reportico->apply_styleset("BODY", $styles, false, "PDF");
 
-            // PAGE DETAIL BOX STYLES
+            // Lght blue report detail sections with dark blue border
             $styles = array(
+                "background-color" => "#ddeeee",
+                "border-width" => "8px 8px 8px 8px",
+                "border-style" => "solid",
+                "border-color" => "#777777",
+                "color" => "#003f00",
                 "margin" => "0 5 0 5",
                 );
             $reportico->apply_styleset("PAGE", $styles, false, "PDF");
 
-            // DETAIL ROW BOX STYLES
+            // Light grey detail row section
             $styles = array(
-                "background-color" => "#cccccc",
+                "background-color" => "#eeeeee",
                 "margin" => "0 10 0 10",
                 );
             $reportico->apply_styleset("ROW", $styles, false, "PDF");
 
-            $styles = array(
-                "background-color" => "#dddddd",
-                );
-            $reportico->apply_styleset("ALLCELLS", $styles, false, "PDF", "lineno() % 2 == 0");
-
-
-            // GROUP HEADER VALUE STYLES
-            /*
+            // White on black group headers and big text in different font
+            // And force page break if 8cm not available
             $styles = array(
                 "background-color" => "#000000",
                 "color" => "#ffffff",
@@ -62,11 +53,8 @@
                 "requires-before" => "8cm",
                 "margin" => "0 10 0 0",
                 );
-            $reportico->apply_styleset("GROUPHEADERVALUE", $styles, "PDF");
-            */
+            $reportico->apply_styleset("GROUPHEADERVALUE", $styles, false, "PDF");
 
-            //GROUP HEADER LABEL STYLES
-            /*
             $styles = array(
                 "background-color" => "#000000",
                 "color" => "#ffffff",
@@ -76,56 +64,50 @@
                 "margin" => "0 0 0 0",
                 "requires-before" => "8cm",
                 );
-            $reportico->apply_styleset("GROUPHEADERLABEL", $styles, "PDF");
-            */
+            $reportico->apply_styleset("GROUPHEADERLABEL", $styles, false, "PDF");
 
-            // ALL CELL STYLES
-            /*
+
+            // Every cell has a border
             $styles = array(
                 "font-family" => "times",
                 "border-width" => "1px 1px 1px 1px",
                 "border-style" => "solid",
                 "border-color" => "#888888",
                 );
-            $reportico->apply_styleset("ALLCELLS", $styles, "PDF");
-            */
+            $reportico->apply_styleset("ALLCELLS", $styles, false, "PDF");
 
-            // Specific named cell styles
-            /*
             $styles = array(
                 "color" => "#880000",
                 "font-weight" => "bold",
                 "font-style" => "italic",
                 );
             $reportico->apply_styleset("CELL", $styles, "id", "PDF");
-            */
 
-            // Column header styles
+
             $styles = array(
-                "color" => "#ffffff",
-                "background-color" => "#999999",
                 "font-weight" => "bold",
+                "font-style" => "italic",
+                "color" => "#bbbb00",
                 );
             $reportico->apply_styleset("COLUMNHEADERS", $styles, false, "PDF");
 
             // Create Report Title Page Header on every page of PDF
-            $reportico->create_page_header("H1", 1, "{REPORT_TITLE}{STYLE border-width: 1 0 1 0; margin: 15px 0px 0px 0px; border-color: #000000; font-size: 18; border-style: solid;padding:5px 0px 5px 0px; height:1cm; background-color: #000000; color: #ffffff}" );
+            $reportico->create_page_header("H1", 1, "Report: {REPORT_TITLE}{STYLE border-width: 1 1 1 1; border-color: #000000; font-size: 18; border-style: solid;padding:10px 14px 0px 6px; height:1cm;margin: 1cm 0cm 0cm 4cm; color: #000000;  width: 90%}" );
             $reportico->set_page_header_attribute("H1", "ShowInHTML", "no" );
             $reportico->set_page_header_attribute("H1", "ShowInPDF", "yes" );
             $reportico->set_page_header_attribute("H1", "Justify", "right" );
 
             // Create Image on every page of PDF
-            /*
             $reportico->create_page_header("H2", 1, "{STYLE width: 100; height: 50; margin: 0 0 0 0; background-color: #003333; background-image:images/reportico100.png;}" );
             $reportico->set_page_header_attribute("H2", "ShowInHTML", "no" );
-            */
 
             // Create Image on every page of PDF
-            $reportico->create_page_header("H3", 1, "Time: date('Y-m-d H:i:s'){STYLE font-size: 10; text-align: right; font-style: italic;}" );
+            $reportico->create_page_header("H3", 1, "Time: date('Y-m-d H:i:s'){STYLE font-size: 18; text-align: right}" );
             $reportico->set_page_header_attribute("H3", "ShowInHTML", "no" );
             $reportico->set_page_header_attribute("H3", "Justify", "right" );
 
             // Create Page No on bottom of PDF page
-            $reportico->create_page_footer("F1", 2, "Page: {PAGE}{STYLE border-width: 1 0 0 0; margin: 40 0 0 0; font-style: italic; }" );
+            $reportico->create_page_footer("F1", 1, "Page: {PAGE}{STYLE margin: 2 0 0 0; }" );
+            //$reportico->set_page_header_attribute("H1", "Justify", "center" );
     }   
 ?>
