Allow reading and writing of config files in old or new versions

--- a/projects/admin/config.template
+++ b/projects/admin/config.template
@@ -7,95 +7,103 @@
 // General User Configuration Settings for Reportico Operation
 // -----------------------------------------------------------------------------
 
-// Password required to gain access to the project
-define('SW_PROJECT_PASSWORD','PROMPT');
+global $g_reportico_config ;
 
-// Location of Reportico Top Level Directory From Browser Point of View
-define('SW_HTTP_BASEDIR', './');
-define('SW_HTTP_URLHOST', 'http://127.0.0.1');
-define('SW_DEFAULT_PROJECT', 'reports');
+
+//setlocale(LC_MONETARY = 'en_US');
+//echo money_format('%i'] = $number) . "\n";
+
+//setlocale(LC_MONETARY = 'en_US';
+//echo money_format('$%.2n'] = $number) . "\n";
+//echo money_format('$%(#10n'] = $number) . "\n";
+
+$g_reportico_config = array(
+        "currency" => "$",
+        "number_delimiter" => ",",
+        "decimal_point" => ".",
+        )
+    ;
+
+$g_reportico_config["design_dropdown"] = 
+    array( "column_format" => array ( 
+                        "number",
+                        "money"
+                        )
+        )
+        ;
+
+
+// Password required to gain access to the project
+// Blank of false implies no passwrd required
+$g_reportico_config['project_password'] = 'PROMPT';
 
 // Project Title used at the top of menus
-define('SW_PROJECT_TITLE','Reportico Administration Page');
-
-// Identify whether to always run in into Debug Mode
-define('SW_ALLOW_OUTPUT', true);
-define('SW_ALLOW_DEBUG', true);
-
-// Identify whether Show Criteria is default option
-define('SW_DEFAULT_SHOWCRITERIA', false);
+$g_reportico_config['project_title'] = 'Set Report Title';
 
 // Specification of Safe Mode. Turn on SAFE mode by specifying true.
-// In SAFE mode, design of reports is allowed but Code and SQL Injection
+// In SAFE mode = design of reports is allowed but Code and SQL Injection
 // are prevented. This means that the designer prevents entry of potentially
 // cdangerous ustom PHP source in the Custom Source Section or potentially
 // dangerous SQL statements in Pre-Execute Criteria sections
-define('SW_SAFE_DESIGN_MODE', true);
-
-// If false prevents any designing of reports
-define('SW_ALLOW_MAINTAIN', true);
-
-// Identify whether to use AJAX handling. Enabling with enable Data Pickers,
-// loading of partial form elements and quicker-ti-use design mode
-define('AJAX_ENABLED',true);
+$g_reportico_config['safe_design_mode'] = true;
 
 // Location of Reportico Top Level Directory From Browser Point of View
 // DB connection details for ADODB
-define('SW_DB_TYPE', 'none');
+$g_reportico_config['db_type'] = 'pdo_mysql';
 // If connecting to existing framework db then use
 // db parameters from external framework
-if ( SW_DB_TYPE == "framework" )
+if ( $g_reportico_config['db_type'] == "framework" )
 {
-define('SW_DB_DRIVER', SW_FRAMEWORK_DB_DRIVER);
-define('SW_DB_USER', SW_FRAMEWORK_DB_USER);
-define('SW_DB_PASSWORD', SW_FRAMEWORK_DB_PASSWORD);
-define('SW_DB_HOST', SW_FRAMEWORK_DB_HOST);
-define('SW_DB_DATABASE', SW_FRAMEWORK_DB_DATABASE);
+$g_reportico_config['db_driver'] = SW_FRAMEWORK_DB_DRIVER;
+$g_reportico_config['db_user'] = SW_FRAMEWORK_DB_USER;
+$g_reportico_config['db_password'] = SW_FRAMEWORK_DB_PASSWORD;
+$g_reportico_config['db_host'] = SW_FRAMEWORK_DB_HOST;
+$g_reportico_config['db_database'] = SW_FRAMEWORK_DB_DATABASE;
 }
 else
 {
-define('SW_DB_DRIVER', SW_DB_TYPE);
-define('SW_DB_USER', '');
-define('SW_DB_PASSWORD', '');
-define('SW_DB_HOST', 'localhost');
-define('SW_DB_DATABASE', '');
+$g_reportico_config['db_driver'] = $g_reportico_config['db_type'];
+$g_reportico_config['db_user'] = 'root';
+$g_reportico_config['db_password'] = 'root';
+$g_reportico_config['db_host'] = 'localhost';
+$g_reportico_config['db_database'] = 'iconnex';
 }
-define('SW_DB_CONNECT_FROM_CONFIG', true);
-define('SW_DB_DATEFORMAT', 'Y-m-d');
-define('SW_PREP_DATEFORMAT', 'Y-m-d');
-define('SW_DB_SERVER', '');
-define('SW_DB_PROTOCOL', '');
-define('SW_DB_ENCODING', 'None');
+$g_reportico_config['db_connect_from_config'] = true;
+$g_reportico_config['db_dateformat'] = 'Y-m-d';
+$g_reportico_config['prep_dateformat'] = 'Y-m-d';
+$g_reportico_config['db_server'] = '';
+$g_reportico_config['db_protocol'] = '';
+$g_reportico_config['db_encoding'] = 'None';
 
 //HTML Output Encoding
-define('SW_OUTPUT_ENCODING', 'None');
+$g_reportico_config['output_encoding'] = 'UTF8';
 
 // Identify temp area
-define('SW_TMP_DIR', "tmp");
+$g_reportico_config['tmp_dir'] = "tmp";
 
 // SOAP Environment
-define('SW_SOAP_NAMESPACE', 'reportico.org');
-define('SW_SOAP_SERVICEBASEURL', 'http://www.reportico.co.uk/swsite/site/tutorials');
+$g_reportico_config['SOAP_NAMESPACE'] = 'reportico.org';
+$g_reportico_config['SOAP_SERVICEBASEURL'] = 'http://www.reportico.co.uk/swsite/site/tutorials';
 
 // Parameter Defaults
-define('SW_DEFAULT_PageSize', 'A4');
-define('SW_DEFAULT_PageOrientation', 'Portrait');
-define('SW_DEFAULT_TopMargin', "1cm");
-define('SW_DEFAULT_BottomMargin', "2cm");
-define('SW_DEFAULT_LeftMargin', "1cm");
-define('SW_DEFAULT_RightMargin', "1cm");
-define('SW_DEFAULT_pdfFont', "Helvetica");
-define('SW_DEFAULT_pdfFontSize', "10");
+$g_reportico_config['pdf_PageSize'] = 'A4';
+$g_reportico_config['pdf_PageOrientation'] = 'Portrait';
+$g_reportico_config['pdf_TopMargin'] = "1cm";
+$g_reportico_config['pdf_BottomMargin'] = "2cm";
+$g_reportico_config['pdf_LeftMargin'] = "1cm";
+$g_reportico_config['pdf_RightMargin'] = "1cm";
+$g_reportico_config['pdf_pdfFont'] = "Helvetica";
+$g_reportico_config['pdf_pdfFontSize'] = "10";
 
 // FPDF parameters
 define('FPDF_FONTPATH', 'fpdf/font/');
 
 // Include an image in your PDF output
 // This defalt places icon top right of a portrait image and sizes it to 100 pixels wide
-//define('PDF_HEADER_IMAGE', 'images/myimage.png');
-//define('PDF_HEADER_XPOS', '470'); 
-//define('PDF_HEADER_YPOS', '20');
-//define('PDF_HEADER_WIDTH', '100');
+//define('PDF_HEADER_IMAGE'] = 'images/myimage.png';
+//define('PDF_HEADER_XPOS'] = '470'); 
+//define('PDF_HEADER_YPOS'] = '20';
+//define('PDF_HEADER_WIDTH'] = '100';
 
 // Graph Defaults
 // Default Charting Engine is JpGraph. A slightly modified version 3.0.7 of jpGraph is supplied
@@ -106,10 +114,10 @@ define('FPDF_FONTPATH', 'fpdf/font/');
 // application into the reportico folder named pChart. pChart 2.1.3
 // You can get pChart from http://www.pchart.net/
 //
-define("SW_GRAPH_ENGINE", "PCHART" );
-if ( !defined("SW_GRAPH_ENGINE") || SW_GRAPH_ENGINE == "JPGRAPH" )
+$g_reportico_config["graph_engine"] = "PCHART" ;
+if ( !$g_reportico_config["graph_engine"] || $g_reportico_config["graph_engine"] == "JPGRAPH" )
 {
-define('SW_DEFAULT_Font', "Arial");
+$g_reportico_config['DEFAULT_Font'] = "Arial";
 //advent_light
 //Bedizen
 //Mukti_Narrow
@@ -120,51 +128,51 @@ define('SW_DEFAULT_Font', "Arial");
 //pf_arma_five
 //Silkscreen
 //verdana
-define('SW_DEFAULT_GraphWidth', 800);
-define('SW_DEFAULT_GraphHeight', 400);
-define('SW_DEFAULT_GraphWidthPDF', 500);
-define('SW_DEFAULT_GraphHeightPDF', 250);
-define('SW_DEFAULT_GraphColor', "white");
-define('SW_DEFAULT_MarginTop', "40");
-define('SW_DEFAULT_MarginBottom', "90");
-define('SW_DEFAULT_MarginLeft', "60");
-define('SW_DEFAULT_MarginRight', "50");
-define('SW_DEFAULT_MarginColor', "white");
-define('SW_DEFAULT_XTickLabelInterval', "1");
-define('SW_DEFAULT_YTickLabelInterval', "2");
-define('SW_DEFAULT_XTickInterval', "1");
-define('SW_DEFAULT_YTickInterval', "1");
-define('SW_DEFAULT_GridPosition', "back");
-define('SW_DEFAULT_XGridDisplay', "none");
-define('SW_DEFAULT_XGridColor', "gray");
-define('SW_DEFAULT_YGridDisplay', "none");
-define('SW_DEFAULT_YGridColor', "gray");
-define('SW_DEFAULT_TitleFont', SW_DEFAULT_Font);
-define('SW_DEFAULT_TitleFontStyle', "Normal");
-define('SW_DEFAULT_TitleFontSize', "12");
-define('SW_DEFAULT_TitleColor', "black");
-define('SW_DEFAULT_XTitleFont', SW_DEFAULT_Font);
-define('SW_DEFAULT_XTitleFontStyle', "Normal");
-define('SW_DEFAULT_XTitleFontSize', "10");
-define('SW_DEFAULT_XTitleColor', "black");
-define('SW_DEFAULT_YTitleFont', SW_DEFAULT_Font);
-define('SW_DEFAULT_YTitleFontStyle', "Normal");
-define('SW_DEFAULT_YTitleFontSize', "10");
-define('SW_DEFAULT_YTitleColor', "black");
-define('SW_DEFAULT_XAxisFont', SW_DEFAULT_Font);
-define('SW_DEFAULT_XAxisFontStyle', "Normal");
-define('SW_DEFAULT_XAxisFontSize', "10");
-define('SW_DEFAULT_XAxisFontColor', "black");
-define('SW_DEFAULT_XAxisColor', "black");
-define('SW_DEFAULT_YAxisFont', SW_DEFAULT_Font);
-define('SW_DEFAULT_YAxisFontStyle', "Normal");
-define('SW_DEFAULT_YAxisFontSize', "8");
-define('SW_DEFAULT_YAxisFontColor', "black");
-define('SW_DEFAULT_YAxisColor', "black");
+$g_reportico_config['chart_GraphWidth'] = 800;
+$g_reportico_config['chart_GraphHeight'] = 400;
+$g_reportico_config['chart_GraphWidthPDF'] = 500;
+$g_reportico_config['chart_GraphHeightPDF'] = 250;
+$g_reportico_config['chart_GraphColor'] = "white";
+$g_reportico_config['chart_MarginTop'] = "40";
+$g_reportico_config['chart_MarginBottom'] = "90";
+$g_reportico_config['chart_MarginLeft'] = "60";
+$g_reportico_config['chart_MarginRight'] = "50";
+$g_reportico_config['chart_MarginColor'] = "white";
+$g_reportico_config['chart_XTickLabelInterval'] = "1";
+$g_reportico_config['chart_YTickLabelInterval'] = "2";
+$g_reportico_config['chart_XTickInterval'] = "1";
+$g_reportico_config['chart_YTickInterval'] = "1";
+$g_reportico_config['chart_GridPosition'] = "back";
+$g_reportico_config['chart_XGridDisplay'] = "none";
+$g_reportico_config['chart_XGridColor'] = "gray";
+$g_reportico_config['chart_YGridDisplay'] = "none";
+$g_reportico_config['chart_YGridColor'] = "gray";
+$g_reportico_config['chart_TitleFont'] = $g_reportico_config['chart_Font'];
+$g_reportico_config['chart_TitleFontStyle'] = "Normal";
+$g_reportico_config['chart_TitleFontSize'] = "12";
+$g_reportico_config['chart_TitleColor'] = "black";
+$g_reportico_config['chart_XTitleFont'] = $g_reportico_config['chart_Font'];
+$g_reportico_config['chart_XTitleFontStyle'] = "Normal";
+$g_reportico_config['chart_XTitleFontSize'] = "10";
+$g_reportico_config['chart_XTitleColor'] = "black";
+$g_reportico_config['chart_YTitleFont'] = $g_reportico_config['chart_Font'];
+$g_reportico_config['chart_YTitleFontStyle'] = "Normal";
+$g_reportico_config['chart_YTitleFontSize'] = "10";
+$g_reportico_config['chart_YTitleColor'] = "black";
+$g_reportico_config['chart_XAxisFont'] = $g_reportico_config['chart_Font'];
+$g_reportico_config['chart_XAxisFontStyle'] = "Normal";
+$g_reportico_config['chart_XAxisFontSize'] = "10";
+$g_reportico_config['chart_XAxisFontColor'] = "black";
+$g_reportico_config['chart_XAxisColor'] = "black";
+$g_reportico_config['chart_YAxisFont'] = $g_reportico_config['chart_Font'];
+$g_reportico_config['chart_YAxisFontStyle'] = "Normal";
+$g_reportico_config['chart_YAxisFontSize'] = "8";
+$g_reportico_config['chart_YAxisFontColor'] = "black";
+$g_reportico_config['chart_YAxisColor'] = "black";
 }
 else // Use jpgraph
 {
-define('SW_DEFAULT_Font', "Mukti_Narrow.ttf");
+$g_reportico_config['chart_Font'] = "Mukti_Narrow.ttf";
 //advent_light.ttf
 //Bedizen.ttf
 //calibri.ttf
@@ -174,51 +182,54 @@ define('SW_DEFAULT_Font', "Mukti_Narrow.ttf");
 //pf_arma_five.ttf
 //Silkscreen.ttf
 //verdana.ttf
-define('SW_DEFAULT_FontSize', "8");
-define('SW_DEFAULT_FontColor', "#303030");
-define('SW_DEFAULT_LineColor', "#303030");
-define('SW_DEFAULT_BackColor', "#eeeeff");
-define('SW_DEFAULT_FontStyle', "Normal");
-define('SW_DEFAULT_GraphWidth', 800);
-define('SW_DEFAULT_GraphHeight', 400);
-define('SW_DEFAULT_GraphWidthPDF', 500);
-define('SW_DEFAULT_GraphHeightPDF', 300);
-define('SW_DEFAULT_GraphColor', SW_DEFAULT_BackColor);
-define('SW_DEFAULT_MarginTop', "50");
-define('SW_DEFAULT_MarginBottom', "80");
-define('SW_DEFAULT_MarginLeft', "70");
-define('SW_DEFAULT_MarginRight', "40");
-define('SW_DEFAULT_MarginColor', SW_DEFAULT_BackColor);
-define('SW_DEFAULT_XTickLabelInterval', "AUTO");
-define('SW_DEFAULT_YTickLabelInterval', "2");
-define('SW_DEFAULT_XTickInterval', "1");
-define('SW_DEFAULT_YTickInterval', "1");
-define('SW_DEFAULT_GridPosition', "back");
-define('SW_DEFAULT_XGridDisplay', "none");
-define('SW_DEFAULT_XGridColor', SW_DEFAULT_LineColor);
-define('SW_DEFAULT_YGridDisplay', "none");
-define('SW_DEFAULT_YGridColor', SW_DEFAULT_LineColor);
-define('SW_DEFAULT_TitleFont', SW_DEFAULT_Font);
-define('SW_DEFAULT_TitleFontStyle', SW_DEFAULT_FontStyle);
-define('SW_DEFAULT_TitleFontSize', 12); 
-define('SW_DEFAULT_TitleColor', SW_DEFAULT_LineColor);
-define('SW_DEFAULT_XTitleFont', SW_DEFAULT_Font);
-define('SW_DEFAULT_XTitleFontStyle', SW_DEFAULT_FontStyle);
-define('SW_DEFAULT_XTitleFontSize', SW_DEFAULT_FontSize);
-define('SW_DEFAULT_XTitleColor', SW_DEFAULT_LineColor);
-define('SW_DEFAULT_YTitleFont', SW_DEFAULT_Font);
-define('SW_DEFAULT_YTitleFontStyle', SW_DEFAULT_FontStyle);
-define('SW_DEFAULT_YTitleFontSize', SW_DEFAULT_FontSize);
-define('SW_DEFAULT_YTitleColor', SW_DEFAULT_LineColor);
-define('SW_DEFAULT_XAxisFont', SW_DEFAULT_Font);
-define('SW_DEFAULT_XAxisFontStyle', SW_DEFAULT_FontStyle);
-define('SW_DEFAULT_XAxisFontSize', SW_DEFAULT_FontSize);
-define('SW_DEFAULT_XAxisFontColor', SW_DEFAULT_FontColor);
-define('SW_DEFAULT_XAxisColor', SW_DEFAULT_LineColor);
-define('SW_DEFAULT_YAxisFont', SW_DEFAULT_Font);
-define('SW_DEFAULT_YAxisFontStyle', SW_DEFAULT_FontStyle);
-define('SW_DEFAULT_YAxisFontSize', SW_DEFAULT_FontSize);
-define('SW_DEFAULT_YAxisFontColor', SW_DEFAULT_LineColor);
-define('SW_DEFAULT_YAxisColor', SW_DEFAULT_LineColor);
+$g_reportico_config['chart_FontSize'] = "8";
+$g_reportico_config['chart_FontColor'] = "#303030";
+$g_reportico_config['chart_LineColor'] = "#303030";
+$g_reportico_config['chart_BackColor'] = "#eeeeff";
+$g_reportico_config['chart_FontStyle'] = "Normal";
+$g_reportico_config['chart_GraphWidth'] = 800;
+$g_reportico_config['chart_GraphHeight'] = 400;
+$g_reportico_config['chart_GraphWidthPDF'] = 500;
+$g_reportico_config['chart_GraphHeightPDF'] = 300;
+$g_reportico_config['chart_GraphColor'] = $g_reportico_config['chart_BackColor'];
+$g_reportico_config['chart_MarginTop'] = "50";
+$g_reportico_config['chart_MarginBottom'] = "80";
+$g_reportico_config['chart_MarginLeft'] = "70";
+$g_reportico_config['chart_MarginRight'] = "40";
+$g_reportico_config['chart_MarginColor'] = $g_reportico_config['chart_BackColor'];
+$g_reportico_config['chart_XTickLabelInterval'] = "AUTO";
+$g_reportico_config['chart_YTickLabelInterval'] = "2";
+$g_reportico_config['chart_XTickInterval'] = "1";
+$g_reportico_config['chart_YTickInterval'] = "1";
+$g_reportico_config['chart_GridPosition'] = "back";
+$g_reportico_config['chart_XGridDisplay'] = "none";
+$g_reportico_config['chart_XGridColor'] = $g_reportico_config['chart_LineColor'];
+$g_reportico_config['chart_YGridDisplay'] = "none";
+$g_reportico_config['chart_YGridColor'] = $g_reportico_config['chart_LineColor'];
+$g_reportico_config['chart_TitleFont'] = $g_reportico_config['chart_Font'];
+$g_reportico_config['chart_TitleFontStyle'] = $g_reportico_config['chart_FontStyle'];
+$g_reportico_config['chart_TitleFontSize'] = 12; 
+$g_reportico_config['chart_TitleColor'] = $g_reportico_config['chart_LineColor'];
+$g_reportico_config['chart_XTitleFont'] = $g_reportico_config['chart_Font'];
+$g_reportico_config['chart_XTitleFontStyle'] = $g_reportico_config['chart_FontStyle'];
+$g_reportico_config['chart_XTitleFontSize'] = $g_reportico_config['chart_FontSize'];
+$g_reportico_config['chart_XTitleColor'] = $g_reportico_config['chart_LineColor'];
+$g_reportico_config['chart_YTitleFont'] = $g_reportico_config['chart_Font'];
+$g_reportico_config['chart_YTitleFontStyle'] = $g_reportico_config['chart_FontStyle'];
+$g_reportico_config['chart_YTitleFontSize'] = $g_reportico_config['chart_FontSize'];
+$g_reportico_config['chart_YTitleColor'] = $g_reportico_config['chart_LineColor'];
+$g_reportico_config['chart_XAxisFont'] = $g_reportico_config['chart_Font'];
+$g_reportico_config['chart_XAxisFontStyle'] = $g_reportico_config['chart_FontStyle'];
+$g_reportico_config['chart_XAxisFontSize'] = $g_reportico_config['chart_FontSize'];
+$g_reportico_config['chart_XAxisFontColor'] = $g_reportico_config['chart_FontColor'];
+$g_reportico_config['chart_XAxisColor'] = $g_reportico_config['chart_LineColor'];
+$g_reportico_config['chart_YAxisFont'] = $g_reportico_config['chart_Font'];
+$g_reportico_config['chart_YAxisFontStyle'] = $g_reportico_config['chart_FontStyle'];
+$g_reportico_config['chart_YAxisFontSize'] = $g_reportico_config['chart_FontSize'];
+$g_reportico_config['chart_YAxisFontColor'] = $g_reportico_config['chart_LineColor'];
+$g_reportico_config['chart_YAxisColor'] = $g_reportico_config['chart_LineColor'];
 }
+
+// Automatic addition of parameter SW_LANGUAGE
+$g_reportico_config['language'] = 'en_gb';
 ?>
